fixed price spacing

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body{
     font-size: 1.5rem;
     position: relative;
     top: -18rem; 
-    left: 45rem;
+    left: 55rem;
     color: #f0a8bb; 
     padding: .1rem; 
     text-align: right;
@@ -106,6 +106,8 @@ body{
     font-size: 12px;
     align-content: left;
     padding: 2px;
+    float: right;
+    margin-right: 10px;
 }
 .tag{
     display:inline-flex;
